chore: 버그 issue 템플릿yml수정

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
-name: '✅ NEW Default'
-description: 'Feature 뉴 템플릿'
+name: '🚀 Feature Request'
+description: '새로운 기능 요청'
 labels: "\U0001F680 feat"
 title: '이슈 이름을 작성해주세요'
 assignees: [author]
