--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,13 +1,13 @@
 name: '🚀 Feature Request'
 description: '새로운 기능 요청'
-labels: "\U0001F680 feat"
+labels: "feat"
 title: '이슈 이름을 작성해주세요'
 assignees: [author]
 body:
   - type: input
     id: description
     attributes:
-      label: '이슈 내용(Description)'
+      label: '📄 이슈 내용(Description)'
       description: '이슈에 대해서 간략히 설명해주세요'
     validations:
       required: true
@@ -15,7 +15,7 @@ body:
   - type: textarea
     id: tasks
     attributes:
-      label: '구현기능(Tasks)'
+      label: '✅ 구현기능(Tasks)'
       description: '해당 이슈에 대해 필요한 작업목록을 작성해주세요'
       value: |
         - [ ] Task1
@@ -25,7 +25,7 @@ body:
   - type: textarea
     id: references
     attributes:
-      label: '참조(References)'
+      label: '📚 참조(References)'
       description: '해당 이슈과 관련된 레퍼런스를 참조해주세요'
       value: |
         - 참고자료
