--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.0.18",
     "tailwindcss": "^4",
     "typescript": "^5"
