--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@eslint/eslintrc": "^3",
     "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-onboarding": "^9.0.18",
+    "@storybook/blocks": "^8.6.14",
     "@storybook/nextjs": "^9.0.18",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
