--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.84.0",
+    "clsx": "^2.1.1",
     "ky": "^1.8.2",
     "next": "15.4.4",
     "react": "19.1.0",
