--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -1,6 +1,6 @@
 name: 'Chromatic Deployment'
 
-on: push
+on: [push, pull_request]
 
 jobs:
   chromatic:
@@ -11,9 +11,26 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - run: yarn
 
-      - uses: chromaui/action@latest
+      - run: yarn install --frozen-lockfile
+
+      - name: Run Chromatic and capture output
+        id: chromatic
+        run: |
+          npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} > chromatic_output.txt
+          echo "CHROMATIC_URL=$(grep -o 'https://www.chromatic.com/build[^ ]*' chromatic_output.txt)" >> $GITHUB_OUTPUT
+
+      - name: Comment on PR with custom message
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
         with:
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const url = '${{ steps.chromatic.outputs.CHROMATIC_URL }}';
+            const body = `스토리북이 배포됐어요 🎉\n\n🔗 [스토리북 보러가기](${url})`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: body
+            });
