--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -1,6 +1,8 @@
 name: 'Chromatic Deployment'
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
 
 jobs:
   chromatic:
@@ -12,7 +14,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Run Chromatic and capture output
         id: chromatic
@@ -20,15 +23,26 @@ jobs:
           npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} > chromatic_output.txt
           echo "CHROMATIC_URL=$(grep -o 'https://www.chromatic.com/build[^ ]*' chromatic_output.txt)" >> $GITHUB_OUTPUT
 
-      - name: Comment on PR with custom message
+      - name: Comment on PR with update time and Storybook URL
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const url = '${{ steps.chromatic.outputs.CHROMATIC_URL }}';
-            const body = `스토리북이 배포됐어요 🎉\n\n🔗 [스토리북 보러가기](${url})`;
-            github.rest.issues.createComment({
+
+            const now = new Date();
+            const kstOffset = 9 * 60; // KST offset in minutes
+            const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
+            const kst = new Date(utc + (kstOffset * 60000));
+
+            const pad = (n) => n.toString().padStart(2, '0');
+            const formattedDate = `${kst.getFullYear()}년 ${pad(kst.getMonth() + 1)}월 ${pad(kst.getDate())}일 ${pad(kst.getHours())}시 ${pad(kst.getMinutes())}분 ${pad(kst.getSeconds())}초`;
+
+            const body = `Update: ${formattedDate}\nStorybook 미리보기 🎨 : ${url}`;
+
+
+            await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
