--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -17,11 +17,12 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run Chromatic and capture output
+      - name: Run Chromatic and capture Storybook URL
         id: chromatic
         run: |
           npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} > chromatic_output.txt
-          echo "CHROMATIC_URL=$(grep -o 'https://www.chromatic.com/build[^ ]*' chromatic_output.txt)" >> $GITHUB_OUTPUT
+          STORYBOOK_URL=$(grep -o 'https://.*\.chromatic\.com/\?path=[^ ]*' chromatic_output.txt | head -n 1)
+          echo "CHROMATIC_URL=${STORYBOOK_URL}" >> $GITHUB_OUTPUT
 
       - name: Comment on PR with update time and Storybook URL
         if: github.event_name == 'pull_request'
@@ -40,7 +41,6 @@ jobs:
             const formattedDate = `${kst.getFullYear()}년 ${pad(kst.getMonth() + 1)}월 ${pad(kst.getDate())}일 ${pad(kst.getHours())}시 ${pad(kst.getMinutes())}분 ${pad(kst.getSeconds())}초`;
 
             const body = `Update: ${formattedDate}\nStorybook 미리보기 🎨 : ${url}`;
-
 
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
