--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -1,8 +1,6 @@
 name: 'Chromatic Deployment'
 
-on:
-  push:
-  pull_request:
+on: push
 
 jobs:
   chromatic:
@@ -13,38 +11,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - run: yarn
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      - uses: chromaui/action@latest
 
-      - name: Run Chromatic and capture Storybook URL
-        id: chromatic
-        run: |
-          npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} > chromatic_output.txt
-          STORYBOOK_URL=$(grep -o 'https://.*\.chromatic\.com/\?path=[^ ]*' chromatic_output.txt | head -n 1)
-          echo "CHROMATIC_URL=${STORYBOOK_URL}" >> $GITHUB_OUTPUT
-
-      - name: Comment on PR with update time and Storybook URL
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const url = '${{ steps.chromatic.outputs.CHROMATIC_URL }}';
-
-            const now = new Date();
-            const kstOffset = 9 * 60; // KST offset in minutes
-            const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
-            const kst = new Date(utc + (kstOffset * 60000));
-
-            const pad = (n) => n.toString().padStart(2, '0');
-            const formattedDate = `${kst.getFullYear()}년 ${pad(kst.getMonth() + 1)}월 ${pad(kst.getDate())}일 ${pad(kst.getHours())}시 ${pad(kst.getMinutes())}분 ${pad(kst.getSeconds())}초`;
-
-            const body = `Update: ${formattedDate}\nStorybook 미리보기 🎨 : ${url}`;
-
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: body
-            });
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
