--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,6 +1,9 @@
-name: Preview Storybook
+name: Storybook Deployment
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     paths:
       - 'src/**'
@@ -10,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  preview-storybook:
+  storybook:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,21 +26,23 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'yarn'
 
       - name: Install packages
-        run: npm install
+        run: yarn install --frozen-lockfile
 
-      - name: Deploy Chromatic
+      - name: Deploy Storybook to Chromatic (No UI Tests)
         id: chromatic
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          onlyChanged: true
+          skip: true # UI 테스트 스킵
+          onlyChanged: ${{ github.event_name == 'pull_request' }}
           autoAcceptChanges: true
 
       - name: Get current time (KST)
+        if: github.event_name == 'pull_request'
         id: current-time
         uses: josStorer/get-current-time@v2
         with:
@@ -45,9 +50,10 @@ jobs:
           utcOffset: '+09:00'
 
       - name: Comment on PR with update time and Storybook URL
+        if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v2
         with:
           comment_tag: ${{ github.event.number }}-storybook
           message: |
-            Update: ${{ steps.current-time.outputs.formattedTime }}
+            업데이트 시간: ${{ steps.current-time.outputs.formattedTime }}
             Storybook 미리보기 🎉: ${{ steps.chromatic.outputs.storybookUrl }}
