--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.6.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.3",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
